--- a/galary.html
+++ b/galary.html
@@ -1,27 +1,44 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>HOME</title>
-	<link rel="stylesheet" href="./birthday.html">
-	<link rel="stylesheet" href="./css/">
+	<title>Gallery</title>
+	<link rel="stylesheet" href="./css/galary.css">
+	<link rel="stylesheet" href="./css/general.css">
 	<link rel="icon" href="./images/icon.png">
-	<meta />
 </head>
+
 <body>
-	<header>
-		<div class="navbar">
-			<a href="./home.html">HOME</a>
-			<a href="./hoppies.html">HOPPIES</a>
-			<a href="./birthday.html">BIRTHDAY</a>
-			<a href="./contact.html">CONTACT US</a>
-			<a href="./galary.html">GALARY</a>
-			<a href="./cv.html">CV</a>
+	<div class="all">
+		<header>
+			<div class="navbar">
+				<div class="pages">
+					<a href="./index.html">HOME</a>
+					<a href="./hoppies.html">HOPPIES</a>
+					<a href="./birthday.html">BIRTHDAY</a>
+					<a href="./contact.html">CONTACT US</a>
+					<a href="./galary.html" style="border-bottom: 2px solid gold;">GALARY</a>
+					<a href="./cv.html">CV</a>
+				</div>
+			</div>
+		</header>
+		<div class="slider-container">
+			<div class="country-cards">
+				<div class="country-card">
+					<div class="country-name">Japan</div>
+					<img src="./images/japan.jpg" alt="Japan" class="slider-img">
+				</div>
+				<div class="country-card">
+					<div class="country-name">Italy</div>
+					<img src="./images/italy.jpeg" alt="Italy" class="slider-img">
+				</div>
+				<div class="country-card">
+					<div class="country-name">Canada</div>
+					<img src="./images/canada.jpg" alt="Canada" class="slider-img">
+				</div>
+			</div>
 		</div>
-	</header>
-
-
-	<footer>
-
-	</footer>
+	</div>
 </body>
+
 </html>
