--- a/hoppies.html
+++ b/hoppies.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>HOME</title>
-	<link rel="stylesheet" href="./birthday.html">
-	<link rel="stylesheet" href="./css/">
+	<title>Hobbies</title>
+	<link rel="stylesheet" href="./css/hoppies.css">
+	<link rel="stylesheet" href="./css/general.css">
 	<link rel="icon" href="./images/icon.png">
-	<meta />
 </head>
+
 <body>
-	<header>
-		<div class="navbar">
-			<a href="./index.html">HOME</a>
-			<a href="./hoppies.html">HOPPIES</a>
-			<a href="./birthday.html">BIRTHDAY</a>
-			<a href="./contact.html">CONTACT US</a>
-			<a href="./galary.html">GALARY</a>
-			<a href="./cv.html">CV</a>
+	<div class="all">
+		<header>
+			<div class="navbar">
+				<div class="pages">
+					<a href="./index.html">HOME</a>
+					<a href="./hoppies.html" style="border-bottom: 2px solid gold;">HOPPIES</a>
+					<a href="./birthday.html">BIRTHDAY</a>
+					<a href="./contact.html">CONTACT US</a>
+					<a href="./galary.html">GALARY</a>
+					<a href="./cv.html">CV</a>
+				</div>
+			</div>
+		</header>
+		<div class="hobbies-gallery">
+			<div class="hobby">
+				<img src="./images/photography.jpg" alt="Hobby 1">
+				<div class="caption">Photography</div>
+			</div>
+			<div class="hobby">
+				<img src="./images/coding.jpg" alt="Hobby 2">
+				<div class="caption">Coding</div>
+			</div>
+			<div class="hobby">
+				<img src="./images/traveling.jpg" alt="Hobby 3">
+				<div class="caption">Traveling</div>
+			</div>
 		</div>
-	</header>
-
-
-	<footer>
-
-	</footer>
+	</div>
 </body>
+
 </html>
