--- a/index.html
+++ b/index.html
@@ -1,27 +1,44 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>HOME</title>
-	<link rel="stylesheet" href="./birthday.html">
-	<link rel="stylesheet" href="./css/">
+	<link rel="stylesheet" href="./css/home.css">
+	<link rel="stylesheet" href="./css/general.css">
 	<link rel="icon" href="./images/icon.png">
 	<meta />
 </head>
+
 <body>
-	<header>
-		<div class="navbar">
-			<a href="./home.html">HOME</a>
-			<a href="./hoppies.html">HOPPIES</a>
-			<a href="./birthday.html">BIRTHDAY</a>
-			<a href="./contact.html">CONTACT US</a>
-			<a href="./galary.html">GALARY</a>
-			<a href="./cv.html">CV</a>
-		</div>
-	</header>
+	<div class="all">
+		<header>
+			<div class="navbar">
+				<div class="pages">
+					<a href="./index.html" style="border-bottom: 2px solid gold;">HOME</a>
+					<a href="./hoppies.html">HOPPIES</a>
+					<a href="./birthday.html">BIRTHDAY</a>
+					<a href="./contact.html">CONTACT US</a>
+					<a href="./galary.html">GALARY</a>
+					<a href="./cv.html">CV</a>
+				</div>
+			</div>
+		</header>
+		<section class="about-me">
+			<img class="about-me-pic" src="./images/person.jpg" alt="Omar's photo">
+			<div class="about-me-info">
+				<h2>Hi! I'm Omar</h2>
+				<p>
+					I'm a passionate learner and tech enthusiast. I enjoy exploring new technologies, capturing
+					moments through photography, and sharing my experiences. Feel free to browse my site to learn more
+					about
+					my interests and projects!
+				</p>
+			</div>
+		</section>
+		<footer>
 
-
-	<footer>
-
-	</footer>
+		</footer>
+	</div>
 </body>
+
 </html>
