--- a/contact.html
+++ b/contact.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>HOME</title>
-	<link rel="stylesheet" href="./birthday.html">
-	<link rel="stylesheet" href="./css/">
+	<title>Contact Us</title>
+	<link rel="stylesheet" href="./css/contact.css">
+	<link rel="stylesheet" href="./css/general.css">
 	<link rel="icon" href="./images/icon.png">
-	<meta />
 </head>
+
 <body>
-	<header>
-		<div class="navbar">
-			<a href="./home.html">HOME</a>
-			<a href="./hoppies.html">HOPPIES</a>
-			<a href="./birthday.html">BIRTHDAY</a>
-			<a href="./contact.html">CONTACT US</a>
-			<a href="./galary.html">GALARY</a>
-			<a href="./cv.html">CV</a>
+	<div class="all">
+		<header>
+			<div class="navbar">
+				<div class="pages">
+					<a href="./index.html">HOME</a>
+					<a href="./hoppies.html">HOPPIES</a>
+					<a href="./birthday.html">BIRTHDAY</a>
+					<a href="./contact.html" style="border-bottom: 2px solid gold;">CONTACT US</a>
+					<a href="./galary.html">GALARY</a>
+					<a href="./cv.html">CV</a>
+				</div>
+			</div>
+		</header>
+		<div class="contact-container">
+			<form class="contact-form">
+				<input type="text" placeholder="Your Name" required>
+				<input type="email" placeholder="Your Email" required>
+				<textarea placeholder="Your Message" required></textarea>
+				<button type="submit">Send</button>
+			</form>
+
 		</div>
-	</header>
-
-
-	<footer>
-
-	</footer>
+	</div>
 </body>
+
 </html>
