--- a/cv.html
+++ b/cv.html
@@ -1,27 +1,54 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>HOME</title>
-	<link rel="stylesheet" href="./birthday.html">
-	<link rel="stylesheet" href="./css/">
+	<title>CV</title>
+	<link rel="stylesheet" href="./css/cv.css">
+	<link rel="stylesheet" href="./css/general.css">
 	<link rel="icon" href="./images/icon.png">
-	<meta />
 </head>
+
 <body>
-	<header>
-		<div class="navbar">
-			<a href="./home.html">HOME</a>
-			<a href="./hoppies.html">HOPPIES</a>
-			<a href="./birthday.html">BIRTHDAY</a>
-			<a href="./contact.html">CONTACT US</a>
-			<a href="./galary.html">GALARY</a>
-			<a href="./cv.html">CV</a>
+	<div class="all">
+		<header>
+			<div class="navbar">
+				<div class="pages">
+					<a href="./index.html">HOME</a>
+					<a href="./hoppies.html">HOPPIES</a>
+					<a href="./birthday.html">BIRTHDAY</a>
+					<a href="./contact.html">CONTACT US</a>
+					<a href="./galary.html">GALARY</a>
+					<a href="./cv.html" style="border-bottom: 2px solid gold;">CV</a>
+				</div>
+			</div>
+		</header>
+		<div class="cv-container">
+			<h2>Omar Khaled</h2>
+			<div class="cv-section">
+				<h3>Personal Info</h3>
+				<ul>
+					<li>Name: Omar</li>
+					<li>Email: omarsliman37@gmail.com</li>
+					<li>Location: Alexandria, Egypt</li>
+				</ul>
+			</div>
+			<div class="cv-section">
+				<h3>Skills</h3>
+				<ul>
+					<li>Web Development</li>
+					<li>Photography</li>
+					<li>Problem Solving</li>
+				</ul>
+			</div>
+			<div class="cv-section">
+				<h3>Experience</h3>
+				<ul>
+					<li>Student at Alexandria University</li>
+					<li>Web Developer</li>
+				</ul>
+			</div>
 		</div>
-	</header>
-
-
-	<footer>
-
-	</footer>
+	</div>
 </body>
+
 </html>
