--- a/thankyou.html
+++ b/thankyou.html
@@ -15,7 +15,7 @@
 				<div class="pages">
 					<a href="./index.html">HOME</a>
 					<a href="./hoppies.html">HOPPIES</a>
-					<a href="./birthday.html">BIRTHDAY</a>
+					<a href="./birthday.html" style="border-bottom: 2px solid gold;">BIRTHDAY</a>
 					<a href="./contact.html">CONTACT US</a>
 					<a href="./galary.html">GALARY</a>
 					<a href="./cv.html">CV</a>
